= master

* Add multibyte_string_matcher plugin for matching multibyte characters (jeremyevans)

* Split roda.rb into separate files (janko) (#177)

= 3.26.0 (2019-11-18)

* Combine multiple asset files with a newline when compiling them, avoiding corner cases with comments (ameuret) (#176)

* Add asychronous streaming support to the streaming plugin (janko) (#175)

= 3.25.0 (2019-10-15)

* Support change in tilt 2.0.10 private API to continue to support compiled templates, with up to 33% performance improvement (jeremyevans)

* Improve render performance with :locals option up to 75% by calling compiled template methods directly (jeremyevans)

= 3.24.0 (2019-09-13)

* Fix Proc.new warning in module_include plugin on Ruby 2.7+ (jeremyevans)

* Improve render_each performance by calling compiled template methods directly (jeremyevans)

= 3.23.0 (2019-08-13)

* Make roda/session_middleware work if type_routing plugin is loaded into Roda itself (jeremyevans) (#169)

* Handle requests with nothing before extension in the path in the type_routing plugin (jeremyevans) (#168)

* Always show line number in exception_page output in exception_page plugin (jeremyevans)

* Improve render/view performance up to 2x in development mode in the default case by calling compiled template methods directly (jeremyevans)

= 3.22.0 (2019-07-12)

* Improve render performance up to 4x in the default case by calling compiled template methods directly (jeremyevans)

= 3.21.0 (2019-06-14)

* Cache compiled templates in development mode, until the template files are modified (jeremyevans)

= 3.20.0 (2019-05-16)

* Set Content-Length header to 0 for empty 205 responses (jeremyevans)

= 3.19.0 (2019-04-12)

* Allow assets plugin :timestamp_paths option to be a string to specify a custom separator (jeremyevans)

* Fix handling for blocks with arity > 1 where expected arity is 1 (jeremyevans)
